<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Chocolate Inventory App</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Chocolates</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_add_chocolate">Add a Chocolate</string>

    <string name="editor_activity_title_edit_chocolate">Edit a Chocolate</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <string name="name">Name</string>

    <string name="price">Price</string>

    <string name="quantity">Quantity</string>

    <string name="euro">€</string>

    <string name="decrement">Less\nChoco</string>

    <string name="zero">0</string>

    <string name="increment">More\nChoco</string>

    <string name="supplier">Supplier</string>

    <string name="supplier_name">Name</string>

    <string name="supplier_phone">Phone</string>

    <string name="supplier_email">Email</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_chocolate_name">choco name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_chocolate_price">Please enter the price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_weight">Weight</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_pet_weight">kg</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <string name="editor_insert_pet_failed">Error with saving pet</string>
    
    <string name="editor_insert_pet_successful">Pet saved</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a chocolate</string>

    <string name="editor_update_pet_failed">The update of the pet has failed</string>

    <string name="editor_update_pet_successful">The Update of the pet was successfull</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
   <string name="discard">Discard</string>

   <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
   <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Pet deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Error with deleting pet</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="unknown_breed">Unknown breed</string>
    
    <string name="empty_view_text">Nothig to show here</string>

    <string name="populate_store">Please populate the store</string>
    
    <string name="empty_stock">The stock is empty</string>

    <string name="delete_dialog_message">The chocolate has been deleted</string>
    
    <string name="editor_delete_failed">The delete action has failed</string>
    
    <string name="editor_delete_successful">The delete action has been successfull</string>
    
    <string name="null_quantity">The quantity must not be null</string>
    
    <string name="editor_insert_failed">The insertion has been failed</string>
    
    <string name="editor_insert_successfull">The insertion has been successfull</string>
    
    <string name="editor_update_failed">The update has failed</string>
    
    <string name="editor_update_successful">The update has been successfull</string>

    <string name="positive_quantity">The give quantity must be above 0</string>

    <string name="unsaved_changes_message">The changes could not be saved</string>

    <string name="error_sale_update">The sales could not be updated</string>

    <string name="unknown_details">The quantity and the price of the chocolate is unknows</string>

    <string name="delete_all">Delete all chocolates</string>

    <string name="order_email_subject">Order for <xliff:g id="chocolate_name"></xliff:g> chocolate</string>

    <string name="order_email">Chocolate quantity is: </string>

    <string name="no_null_quantity">Please introduce a quantity</string>

    <string name="no_null_image">Please choose  an image</string>

    <string name="no_null_price">Please introduce a price</string>

    <string name="no_null_name">Please introduce a name</string>

    <string name="buy">Buy chocolate</string>

    <string name="order_chocolate">ORDER\nCHOCOLATE</string>

    <string name="delete_all_chocolates">All chocolates have been deleted</string>

    <string name="introduce_picture">Please chose a picture"</string>

</resources>
