<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/new_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:clickable="true"
                android:src="@drawable/add_chocolate" />

            <TextView
                android:id="@+id/save_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/activity_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:textSize="16sp"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/chocolate_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_chocolate_name"
                        android:textSize="14sp"
                        android:inputType="textCapSentences" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:text="@string/price" />

                    <EditText
                        android:id="@+id/chocolate_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/euro"
                        android:inputType="numberDecimal" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_margin"
                android:text="@string/quantity" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrement" />

            <EditText
                android:id="@+id/chocolate_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin"
                android:hint="@string/zero"
                android:inputType="number"
                android:textSize="15sp" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increment" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_margin"
                android:text="@string/supplier" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/supplier_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/supplier_name"
                    android:textSize="15sp"
                    android:inputType="textCapSentences" />

                <EditText
                    android:id="@+id/supplier_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:hint="@string/supplier_phone"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/supplier_email"
                    android:layout_width="wrap_content"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/supplier_email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/phone_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="ORDER"
                android:textSize="@dimen/activity_margin" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/email_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_email_black_24dp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
