<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4">

        <LinearLayout
            android:id="@+id/click_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@style/TextStyle"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin" />

            <LinearLayout style="@style/WrapWrap">

                <TextView
                    style="@style/TextStyle"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:text="@string/quantity" />

                <TextView
                    android:id="@+id/quantity"
                    style="@style/WrapWrap"
                    android:layout_margin="@dimen/activity_margin"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout style="@style/WrapWrap">

                <TextView
                    style="@style/TextStyle"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/price"
                    style="@style/WrapWrap"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/price_currency"
                    style="@style/WrapWrap"
                    android:text="@string/euro"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/cart_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:contentDescription="@string/buy"
            android:src="@drawable/ic_shopping_cart_black_24dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/picture"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:src="@drawable/empty_chocolate_box" />
</LinearLayout>