<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the list of pets -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch"
    tools:context=".CatalogActivity">

    <ListView
        android:id="@+id/list"
        style="@style/MatchMatch" />

    <RelativeLayout
        android:id="@+id/empty_view"
        style="@style/MatchWrap"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_store_image"
            android:layout_width="@dimen/chocolate_box"
            android:layout_height="@dimen/chocolate_box"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/empty_chocolate_box" />

        <TextView
            android:id="@+id/empty_title_text"
            style="@style/WrapWrap"
            android:layout_below="@+id/empty_store_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="@dimen/activity_margin"
            android:text="@string/empty_view_title_text"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            style="@style/WrapWrap"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="@dimen/activity_margin"
            android:text="@string/empty_view_subtitle_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/grey_text" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        style="@style/WrapWrap"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add" />
</RelativeLayout>